src/App.css
:root {
  --primary-color: #ce6ace;
  --secondary-color: #8d458d;
  --bg-color: #24203d;
  --input-bg-color: #383069;
  --suggestions-bg-color: #6e60be;
  --suggestions-hover: #782da3;
  --event-border-color: #b858b8;
  --event-bg-color: #524599;
  --event-bg-color-expanded: #234c8a;
  --button-color: #383069;
  --button-border-color: #b858b8;
  --button-text-color: #ffcfff;
  --button-hover-color: #703681;
  --box-shadow-color: rgb(0, 0, 0, 0.5);
  --link-color: #5bfff1;
  --link-visited-color: #e48cff;
}


html {
  font-family: "Nunito", sans-serif;
  font-weight: 400;
  font-display: block;
  font-size: 16px;
  line-height: 1.6;
}

body {
  display: flex;
  justify-content: center;
  background-color: var(--bg-color);
  color: white;
}

.custom-tooltip {
  background-color: var(--input-bg-color);
  padding: 4px 16px 4px 16px;
  border-radius: 5px;
  outline: 1px solid var(--event-border-color);
}

input[type="number"] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}

.App {
  text-align: center;
  padding: 2rem 0;
}

.App * {
  box-sizing: border-box;
}

.search-container>h1 {
  font-weight: bold;
  font-size: 4rem;
  color: var(--link-color);
  margin-bottom: 1rem;
}

.bg-top {
  position: absolute;
  width: 100%;
  height: 200px;
  background-image: linear-gradient(var(--event-bg-color), var(--bg-color));
  left: 0;
  top: 0;
  z-index: -1;
}

ul {
  padding: 0;
  list-style: none;
}

p {
  margin: 5px 0;
}

text {
  font-size: 0.75rem;
  font-weight: bold;
}

.search-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
  gap: 1rem;
}

.search-container>div {
  display: flex;
  justify-content: right;
  align-items: center;
  flex: 1 1 auto;
  flex-wrap: wrap;
  gap: 1rem;
}

hr {
  border: 1px solid var(--primary-color);
  margin-bottom: 1rem;
}

input[type="text"],
input[type="number"] {
  padding: 8px 6px 8px 10px;
  border-radius: 8px;
  border: 5px solid var(--secondary-color);
  font-size: 14px;
  line-height: 20px;
  align-self: center;
  height: 40px;
  margin-bottom: 20px;
  background-color: var(--input-bg-color);
  color: white;
}

input[type="number"] {
  min-width: 50px;
}

input[type="text"]:focus,
input[type="number"]:focus {
  outline: 2px solid var(--primary-color);
}

#events-amount {
  margin-left: 12px;
  width: 50px;
}

.city {
  width: 250px;
}

#city-search {
  display: flex;
  flex-direction: column;
  position: relative;
}

.suggestions {
  width: 250px;
  position: absolute;
  top: 45px;
  z-index: 2;
  align-self: center;
  margin: 0;
  font-size: 14px;
  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.15);
}

.suggestions>li {
  text-align: left;
  padding: 8px 6px 8px 10px;
  background-color: #ffffff;
  cursor: default;
  background-color: var(--suggestions-bg-color);
}

.suggestions>li:first-child {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.suggestions>li:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.suggestions>li:hover {
  background-color: var(--suggestions-hover)
}

#event-list {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
}

.event {
  flex: 1 1 auto;
  width: 100%;
  padding: 8px 16px 48px 16px;
  margin-bottom: 0;
  text-align: left;
  outline: 2px solid var(--event-border-color);
  border-radius: 10px;
  position: relative;
  background-color: var(--event-bg-color);
  transition: height 0.3s ease-in-out;
  overflow: hidden;
}

.details {
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
}

.details-hidden {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.event>p {
  color: var(--button-text-color);
}

.event-description {
  margin-bottom: 2rem;
}

h1,
h2 {
  margin-top: 0;
  margin-bottom: 0.25rem;
  font-weight: 500;
}

a {
  color: var(--link-color);
  font-weight: 500;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-underline-offset: 5px;
}

a:visited {
  color: var(--link-visited-color);
  outline: 2px solid var(--button-text-color);
  outline-offset: 3px;
}

.show-details {
  z-index: 99;
  position: absolute;
  right: 10px;
  bottom: 10px;
  padding: 8px 12px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  background-color: var(--button-color);
  outline: 2px solid var(--button-border-color);
  color: var(--button-text-color);
}

.show-details:hover,
.show-charts:hover {
  background-color: var(--button-hover-color);
}

.show-details:focus,
.show-charts:focus {
  outline: 2px solid var(--button-text-color);
}

.alerts-container {
  position: fixed;
  top: 0px;
  left: 20px;
  width: 250px;
  z-index: 1000;
}

.chart,
.pie-chart {
  margin-bottom: 5rem;
}

.charts-container {
  position: relative;
  background-color: #1c1933;
  border-radius: 10px;
  padding: 6px;
  text-align: left;
  width: 100%;
  margin-bottom: 2rem;
  transition: height 0.3s ease-in-out, padding 0.3s ease-in-out;
  overflow: hidden;
  height: 50px;
}

.charts-container-expanded {
  height: 500px;
}

.charts-details {
  margin: 0;
  padding: 0;
  display: flex;
  text-align: center;
}

.charts-container h2 {
  margin: 0 0 0 16px;
  color: white;
}

.show-charts {
  position: absolute;
  bottom: 10px;
  right: 10px;
  padding: 8px 12px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  background-color: var(--button-color);
  color: var(--button-text-color)
}

@media all and (max-width: 400px) {
  .App {
    width: 19rem;
  }

  .charts-container-expanded {
    grid-template-columns: 1fr;
    height: 975px;
  }

  .search-container>div {
    justify-content: center;
  }

  .pie-chart text {
    display: none;
  }
}

@media all and (min-width: 600px) {
  .App {
    width: 35rem;
  }

  .charts-container-expanded {
    grid-template-columns: 1fr;
    height: 975px;
  }
  
  .pie-chart text {
    display: none;
  }

  .search-container>div {
    justify-content: right;
  }
}

@media all and (min-width: 768px) {
  .App {
    width: 45rem;
  }

  .charts-container-expanded {
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 500px;
  }
}

@media all and (min-width: 992px) {
  .App {
    width: 60rem;
  }

  .pie-chart text {
    display: inline
  }
}

